configurando swagger da listagem de ambientes publicos
