# src/routes/general.route.ts
@@ -3,6 +3,6 @@ import { Router }  from 'express';
 
 const routes = Router();
 
-routes.get('/', GeneralController.environsments);
+routes.get('/public/environments', GeneralController.environsments);
 
 export default routes;
